--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
 <div>
   <h2 *ngIf="(selectedHashtag$ | async) as selectedHashtag">#{{ selectedHashtag }}</h2>
 </div>
+
+<div class="card-container">
+  <app-number-of-tweets-card></app-number-of-tweets-card>
+</div>
