--- a/src/app/modules/dashboard/number-of-tweets-card/number-of-tweets-card.component.html
+++ b/src/app/modules/dashboard/number-of-tweets-card/number-of-tweets-card.component.html
@@ -1,7 +1,10 @@
 <mat-card>
   <mat-card-content>
-    <p>
-      testing this
-    </p>
+    <div>
+      <h1>
+        <b>{{ selectedHashtagTweetCount$ | async }}</b>
+      </h1>
+      <h4>Tweets</h4>
+    </div>
   </mat-card-content>
 </mat-card>
