--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,5 +27,5 @@ $ng-twitter-dashboard-theme: mat-dark-theme($ng-twitter-dashboard-primary, $ng-t
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; font-size: 16px; }
+html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
