refactor card WIP

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -5,5 +5,6 @@
 
   <div class="card-container">
     <app-number-of-tweets-card></app-number-of-tweets-card>
+    <app-average-per-minute-card></app-average-per-minute-card>
   </div>
 </div>
