--- a/src/app/modules/dashboard/data-display-card/data-display-card.component.html
+++ b/src/app/modules/dashboard/data-display-card/data-display-card.component.html
@@ -2,9 +2,9 @@
   <mat-card-content>
     <div>
       <h1>
-        <b>{{ selectedHashtagTweetCount$ | async }}</b>
+        <b>{{ data }}</b>
       </h1>
-      <h4>Tweets</h4>
+      <h4>{{ dataLabel }}</h4>
     </div>
   </mat-card-content>
 </mat-card>
