add average per min card

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -10,5 +10,9 @@
       [data]="selectedHashtagTweetCount$ | async"
       dataLabel="Tweets"
     ></app-data-display-card>
+    <app-data-display-card
+      [data]="selectedHashtagAvgPerMin$ | async"
+      dataLabel="Avg / min"
+    ></app-data-display-card>
   </div>
 </div>
