--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -3,9 +3,20 @@
     padding: 15px 20px;
 
     .card-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
+      > div {
+        display: flex;
+        justify-content: space-evenly;
+
+        &.data-cards {
+          padding-bottom: 10px;
+        }
+
+        &.chart-cards {
+          padding-top: 10px;
+        }
+
+      }
+
     }
   }
 }
