--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,10 +31,10 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .mat-app-background {
-  background-color: #131419;
+  background-color: #33333D;
 }
 
 .mat-card {
-  background-color: mat-color($mat-blue-grey, 900);
+  background-color: #3F3F4A;
 }
 
