--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div>
-    <h2 *ngIf="(selectedHashtag$ | async) as selectedHashtag">#{{ selectedHashtag }}</h2>
+  <div class="selected-hashtag">
+    <h1 *ngIf="(selectedHashtag$ | async) as selectedHashtag">#{{ selectedHashtag }}</h1>
   </div>
 
   <div class="card-container">
@@ -9,15 +9,13 @@
         [data]="selectedHashtagTweetCount$ | async"
         dataLabel="Tweets"
       ></app-data-display-card>
-      <mat-divider [vertical]="true"></mat-divider>
       <app-data-display-card
         [data]="selectedHashtagAvgPerMin$ | async"
         dataLabel="Avg / min"
       ></app-data-display-card>
     </div>
-    <mat-divider></mat-divider>
     <div class="chart-cards">
-      <app-pie-chart-card [chartData]="chartData$ | async" [showLabels]="true"></app-pie-chart-card>
+      <app-pie-chart-card [chartData]="chartData$ | async"></app-pie-chart-card>
     </div>
   </div>
 </div>
