--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -2,6 +2,11 @@
   > .container {
     padding: 15px 20px;
 
+    .selected-hashtag {
+      text-align: center;
+      font-size: 1.5rem;
+    }
+
     .card-container {
       > div {
         display: flex;
