--- a/src/app/modules/dashboard/data-display-card/data-display-card.component.html
+++ b/src/app/modules/dashboard/data-display-card/data-display-card.component.html
@@ -2,9 +2,10 @@
   <mat-card-content>
     <div>
       <h1>
-        <b>{{ data }}</b>
+        <b>{{ data || 0 }}</b>
       </h1>
       <h4>{{ dataLabel }}</h4>
     </div>
   </mat-card-content>
 </mat-card>
+<mat-divider></mat-divider>
