--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,11 @@
 :host {
-
   .header {
     padding-left: 20px;
-    background-color: #3F3F4A;
+    background-color: #3f3f4a;
 
-    .title  {
+    .title {
       font-size: 3rem;
     }
-
   }
 
   .mat-divider {
