--- a/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.html
+++ b/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.html
@@ -2,7 +2,9 @@
   <mat-card-title>Country Code Sample</mat-card-title>
   <mat-card-content>
     <div class="chart">
-      <ngx-charts-advanced-pie-chart [results]="chartData"></ngx-charts-advanced-pie-chart>
+      <ngx-charts-advanced-pie-chart
+        [results]="chartData"
+      ></ngx-charts-advanced-pie-chart>
     </div>
   </mat-card-content>
 </mat-card>
