--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="selected-hashtag">
-    <h1 *ngIf="(selectedHashtag$ | async) as selectedHashtag">#{{ selectedHashtag }}</h1>
+    <h1 *ngIf="selectedHashtag$ | async as selectedHashtag">
+      #{{ selectedHashtag }}
+    </h1>
   </div>
 
   <div class="card-container">
@@ -14,6 +16,7 @@
         dataLabel="Avg / min"
       ></app-data-display-card>
     </div>
+    <mat-divider></mat-divider>
     <div class="chart-cards">
       <app-pie-chart-card [chartData]="chartData$ | async"></app-pie-chart-card>
     </div>
