--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,18 @@
 :host {
+  display: block;
+
   .header {
     padding-left: 20px;
     background-color: #3f3f4a;
 
     .title {
+      padding: 15px 0;
       font-size: 3rem;
+      font-weight: 600;
+    }
+
+    .subtitle {
+      padding-bottom: 20px;
     }
   }
 
