--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -1,9 +1,12 @@
 :host {
+  display: block;
+
   > .container {
     padding: 15px 20px;
 
     .selected-hashtag {
       text-align: center;
+
       font-size: 1.5rem;
     }
 
