--- a/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.html
+++ b/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.html
@@ -1,9 +1,10 @@
-<mat-card>
+<mat-card class="mat-elevation-z4">
   <mat-card-title>Country Code Sample</mat-card-title>
   <mat-card-content>
     <div class="chart">
       <ngx-charts-advanced-pie-chart
         [results]="chartData"
+        [animations]="false"
       ></ngx-charts-advanced-pie-chart>
     </div>
   </mat-card-content>
