--- a/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.html
+++ b/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.html
@@ -8,4 +8,5 @@
       ></ngx-charts-advanced-pie-chart>
     </div>
   </mat-card-content>
+  <mat-card-footer>&nbsp;</mat-card-footer>
 </mat-card>
