--- a/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.scss
+++ b/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.scss
@@ -1,8 +1,14 @@
+@import '~@angular/material/theming';
+
 :host {
   display: block;
   flex-basis: 50%;
 
   .chart {
     height: 300px;
+  }
+
+  .mat-card-footer {
+    background-color: mat-color($mat-pink, 300);
   }
 }
