--- a/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.scss
+++ b/src/app/modules/dashboard/pie-chart-card/pie-chart-card.component.scss
@@ -2,7 +2,9 @@
 
 :host {
   display: block;
-  flex-basis: 50%;
+  flex-basis: auto;
+  flex-grow: 1;
+  margin: 20px;
 
   .chart {
     height: 300px;
